Stop stupid overflow

--- a/static/styles/boats.css
+++ b/static/styles/boats.css
@@ -5,7 +5,6 @@
 
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
 
 	gap: 1em;
@@ -15,5 +14,8 @@
 {
 	width: 100%;
 
-	background-color: red;
+	background-color: lightgray;
+
+	border-radius: 1em;
+	border: 1px solid black;
 }
